--- a/.babelrc
+++ b/.babelrc
@@ -5,8 +5,8 @@
     [
       "@babel/preset-env",
       {
-        "corejs": "2",
         "useBuiltIns": "usage",
+        "corejs": {"version": 3, "proposals": true},
         "modules": false
       }
     ]
