--- a/.eslintrc
+++ b/.eslintrc
@@ -2,10 +2,7 @@
   "globals": {
     "Waypoint": true
   },
-  "plugins": [
-    "react",
-    "prettier"
-  ],
+  "plugins": ["react", "prettier"],
   "extends": [
     "airbnb",
     "plugin:react/recommended",
@@ -25,29 +22,78 @@
   },
   "rules": {
     "comma-dangle": 0,
+    "camelcase": "off",
     "linebreak-style": 0,
     "consistent-return": 0,
-    "import/no-extraneous-dependencies": 0,
-    "class-methods-use-this:": 0,
-    "jsx-a11y/no-static-element-interactions": ["error", {"handlers": [] }],
+    "import/prefer-default-export": "off",
+    "import/order": [
+      "error",
+      {
+        "newlines-between": "always",
+        "pathGroupsExcludedImportTypes": ["internal"],
+        "groups": [
+          "builtin",
+          "external",
+          "internal",
+          "parent",
+          "sibling",
+          "object",
+          "index"
+        ]
+      }
+    ],
+    "sort-imports": [
+      "error",
+      {
+        "ignoreCase": false,
+        "ignoreDeclarationSort": true,
+        "ignoreMemberSort": false,
+        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"],
+        "allowSeparatedGroups": false
+      }
+    ],
     "id-length": [1, { "min": 1 }],
-    "arrow-parens": ["error", "as-needed"],
-    "max-len": [2, 200, 2, {
-      "ignoreUrls": true,
-      "ignoreComments": false
-    }],
+    "class-methods-use-this:": 0,
+    "max-len": [
+      2,
+      200,
+      2,
+      {
+        "ignoreUrls": true,
+        "ignoreComments": false
+      }
+    ],
     "object-curly-newline": 0,
-    "jsx-a11y/anchor-is-valid": 0,
     "react/require-default-props": 0,
+    "react/jsx-props-no-spreading": [
+      "error",
+      {
+        "html": "enforce",
+        "custom": "ignore"
+      }
+    ],
     "react/forbid-prop-types": [2, { "forbid": ["any"] }],
-    "jsx-a11y/label-has-for": [ 2, {
-      "components": [ "Label" ],
-      "required": {
-        "every": [ "nesting", "id" ]
-      },
-      "allowChildren": false
-    }],
-    "prettier/prettier": "error"
+    "react/no-array-index-key": "off",
+    "jsx-a11y/label-has-for": [
+      2,
+      {
+        "components": ["Label"],
+        "required": {
+          "every": ["nesting", "id"]
+        },
+        "allowChildren": false
+      }
+    ],
+    "jsx-a11y/no-static-element-interactions": ["error", { "handlers": [] }],
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": ["Link"],
+        "specialLink": ["to", "hrefLeft", "hrefRight"],
+        "aspects": ["noHref", "invalidHref", "preferButton"]
+      }
+    ],
+    "prettier/prettier": ["error", { "singleQuote": true }]
   },
   "settings": {
     "import/resolver": {
