--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "prettier/react",
     "prettier/standard"
   ],
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "sourceType": "module",
     "ecmaFeatures": {
