--- a/package.json
+++ b/package.json
@@ -11,22 +11,28 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "axios": "^0.20.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.79",
+    "@mui/material": "^5.6.3",
+    "@mui/styled-engine-sc": "^5.6.1",
+    "@mui/styles": "^5.6.2",
+    "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "core-js": "^3.7.0",
-    "lodash": "^4",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
+    "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-proposal-optional-chaining": "^7.12.1",
@@ -37,7 +43,6 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.5",
     "autoprefixer": "^10.0.2",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.1",
     "babel-plugin-import": "^1.13.1",
     "babel-plugin-lodash": "^3.3.4",
@@ -46,15 +51,16 @@
     "compression-webpack-plugin": "^6.1.1",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^1.1.5",
-    "dotenv-webpack": "^4.0.0",
-    "eslint": "^7.13.0",
+    "dotenv-webpack": "^7.1.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-babel-module": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^5.0.0-alpha.14",
     "less": "^3.12.2",
@@ -65,9 +71,9 @@
     "style-loader": "^2.0.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
-    "webpack": "5.36.0",
-    "webpack-cli": "4.6.0",
-    "webpack-dev-server": "3.11.2",
+    "webpack": "^5.36.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^3.11.2",
     "webpack-merge": "5.7.3"
   },
   "browserslist": [
