--- a/.eslintrc
+++ b/.eslintrc
@@ -21,11 +21,14 @@
     "browser": true
   },
   "rules": {
+    "max-len": 0,
+    "no-nested-ternary": 0,
     "comma-dangle": 0,
     "camelcase": "off",
     "linebreak-style": 0,
     "consistent-return": 0,
     "import/prefer-default-export": "off",
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
     "import/order": [
       "error",
       {
@@ -54,15 +57,6 @@
     ],
     "id-length": [1, { "min": 1 }],
     "class-methods-use-this:": 0,
-    "max-len": [
-      2,
-      200,
-      2,
-      {
-        "ignoreUrls": true,
-        "ignoreComments": false
-      }
-    ],
     "object-curly-newline": 0,
     "react/require-default-props": 0,
     "react/jsx-props-no-spreading": [
@@ -98,6 +92,9 @@
   "settings": {
     "import/resolver": {
       "babel-module": {}
+    },
+    "node": {
+      "paths": ["./"]
     }
   }
 }
